# prosody-coach

./: .gitignore  README.md  analyzer.py  coach.py  config.py  feedback.py  main.py  prompts.py  pyproject.toml  realtime.py  recorder.py  requirements.txt  storage.py  test_optimizations.py
