[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prosody-coach"
version = "0.1.0"
description = "CLI tool to improve English prosody for non-native speakers"
requires-python = ">=3.10"
dependencies = [
    "praat-parselmouth>=0.4.3",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "google-genai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
prosody = "main:app"

[tool.setuptools]
py-modules = ["main", "analyzer", "coach", "config", "feedback", "prompts", "recorder", "storage"]
